# moor

./: .gitignore  CMakeLists.txt  COPYING
moor/: CMakeLists.txt  archive.cpp  archive.hpp  archive_entry.cpp  archive_entry.hpp  archive_iterator.hpp  archive_match.cpp  archive_match.hpp  archive_read_disk.cpp  archive_read_disk.hpp  archive_reader.cpp  archive_reader.hpp  archive_write_disk.cpp  archive_write_disk.hpp  archive_writer.cpp  archive_writer.hpp  memory_writer_callback.cpp  memory_writer_callback.hpp  moor_build_config.hpp  moor_utils.hpp  read_disk.hpp  supported_formats.cpp  supported_formats.hpp  types.cpp  types.hpp
test/: CMakeLists.txt  test_compress.cpp
test/test_data_dir/foo_dir/: a.txt  b.txt
